# Pass-LLM-with-LLM

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.example.md  HANDOFF.md  README.md  README_CN.md  SECURITY.md  START_HERE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
algorithms/: mistake_log.md  mock_exam_log.md  python_oj_template.py
algorithms/solutions/: example_ring_substring.md
daily/: README.md
docs/: INDEX.md  environment-support.md  exam-memory-design.md  exam-memory-roadmap.md  mcp-setup-guide.md  open-source-plan.md  progress-organization-plan.md  solve-analyze-plan.md
exam_memory/: pyproject.toml  server.py
llm/: transformer-forward-pass.md  transformer-review.md
progress/: README.md
prompts/: new_session_prompt.md
scripts/: check_main_extraction.py
shared/exam_memory/: difficulty_calibrator.py  distill_export.py  pyproject.toml  question_bank.py  review_builder.py  server.py  sources.yaml  text_pipeline.py  vector_store.py
shared/progress/: README.md
skills/: algo-annotation.md  choice-q-create.md  choice-q-drill.md  exam-assistant.md  init-guide.md  review-tracker.md
skills/solve-analyze/: SKILL.md
skills/solve-skeleton/: SKILL.md
targets/pdd-algo/: topic_checklist.md
tests/: test_check_main_extraction.py  test_difficulty_calibrator.py  test_distill_export.py  test_question_bank.py  test_review_builder.py  test_semantic_dedup.py  test_source_connector.py  test_text_pipeline.py
(+8 files in other folders)
