[project]
name = "exam-memory"
version = "1.0.0"
description = "考试经验沉淀 MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embed = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
langchain = [
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
]
full = [
    "exam-memory[embed,langchain]",
]

[project.scripts]
exam-memory = "exam_memory.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
